clusters/apps/default/services/fullstack/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: fullstack
  labels:
    app: backend
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: "backend"
    spec:
      volumes:
        - name: config
          configMap:
            name: configuration
            defaultMode: 420
      containers:
      - name: fullstack
        image: registry.home.jrbeverly.dev/backend:latest
        ports: 
        - containerPort: 8081
        volumeMounts:
          - mountPath: /app/.env
            name: config
            subPath: .env
