clusters/apps/default/services/fullstack/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fullstack
  namespace: fullstack
  labels:
    app: fullstack
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: fullstack
  template:
    metadata:
      labels:
        app: "fullstack"
    spec:
      containers:
      - name: fullstack
        image: registry.home.jrbeverly.dev/frontend:latest
        ports: 
        - containerPort: 80
