clusters/apps/default/services/fullstack/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: fullstack
spec:
  selector:
    app: "backend"
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8081
