clusters/apps/default/services/fullstack/db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: fullstack
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: postgres
