clusters/apps/default/services/fullstack/ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fullstack
  namespace: fullstack
spec:
  selector:
    app: "fullstack"
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
